fix mobile search issue + update llms.txt (#409)
* fix scrollbar issue

* fix pixelated image

* add redirect from a broken link

* fix mobile footer 404

* fix #384

* add algolia search

* remove the other search plugin

* style search

* remove nofollow

* fix mobile search

--- a/src/css/docs.css
+++ b/src/css/docs.css
@@ -818,6 +818,10 @@ details [class^='collapsibleContent_'] {
   @apply !flex !flex-row;
 }
 
+.DocSearch-Reset {
+  width: auto;
+}
+
 [class^='navbarSearchContainer_'] {
   @apply lg:w-full;
 }
